# STAT409Project

./: .gitignore  Organ.csv  R code.ipynb  README.md
Codes/: GAM.ipynb  LICENSE  pyproject.toml
Codes/src/dnnpype/: __init__.py  appDNN.py  appSound.py  dnnpype.py  loss.py  model.py  opt.proposed.py  opt.py  sound.py
Data/: DataDescription.md  Organ.csv  Organ2.csv  allOrgan.csv  script.py
Notes/: 04_01_Tue_Notes.md  04_03_Thu_Notes.md  04_08_Tue_Notes.md
Other/: 001_InterviewQuestions.md  002_OtherPapers.md
Reports/ActionPlan/: brief-action-plan.tex  makefile  psu-plan.cls  psu-report.cls  psu-thesis-chicago.sty  refs.bib  report.tex
Reports/Presentation/: beamerthemePSU.sty  makefile  presentation.tex  psu-colors.sty  psu-logos.sty
jnp/: pyCode.ipynb  rCode.ipynb
