[project]
name = "dnnpype"
version = "0.1.0"
description = "DNN modeling for acoustic pipes using Flax/JAX"
license = {text = "MPL-2.0"}
authors = [
    { name = "Gabriel Pinochet-Soto", email = "gpin2@pdx.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "flax",
    "optax",
    "sounddevice",
    "rich",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
classify_samples = "dnnpype.appSound:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnnpype"]
